--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,10 @@
       <%= link_to "Optimal CRM", '#', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    '#' %></li>
+            <li><%= link_to "Sign up", new_salesrepresentative_path %></li>
+           <li><%= link_to "Log In", new_session_path %></li>
+          <li><%#= link_to "Home", salesrepresentative_path(current_user) %></li>
+
           <li><%= link_to "Help",    '#' %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul>
