added errors and links

--- a/app/views/salesrepresentatives/show.html.erb
+++ b/app/views/salesrepresentatives/show.html.erb
@@ -7,3 +7,6 @@
 <br>
 <label> Click here to view all of your leads:<%= link_to "All of your leads", salesrepresentative_leads_path(@salesrep) %> </label>
 
+<label>Click here to view your Organizations: </label>
+
+
