--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,6 +1,21 @@
 <h1>Fill out form below to add a lead</h1>
 
 
+  <% if @lead.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@lead.errors.count, "error") %> prohibited
+        this lead from being saved:
+      </h2>
+      <ul>
+        <% @lead.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
 
 <%= form_for(@lead) do |f|%>
 
