changed <li> tags and added labels

--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -1,2 +1,24 @@
-<%= @lead.name %>
+<h1> Lead show page</h1>
+
+
+<h4> Name of lead:</h4>
+ <%= @lead.name %> 
+<br> <br>
+
+<h4> Email address: </h4> 
+<%= @lead.email %>
+<br> <br>
+
+<h4>Phone number: </h4>
+ <%= @lead.phone_number %>
+<br> <br>
+
+
+<h4> Already a customer? </h4>
+<%= @lead.customer %> 
+<br> <br>
+
+
+
+
 <%= @lead.salesrepresentative %>
