--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -25,7 +25,7 @@
 <br><br>
 
 <%= f.label :revenue %>
-<%= f.email_field :revenue %>
+<%= f.text_field :revenue %>
 <br><br>
 
 <%= f.label "Country:"%>
@@ -48,7 +48,7 @@
  <%= f.select(:customer, [["Yes", true], ["No", false]])  %>
 
 
-
+<br><br>
 
 <%=f.submit "Submit Company/Organization Information:" %>
 
