--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,3 +1,7 @@
 <h1> Welcome to Optimal CRM</h1>
 
+<h3>New to Optimal? Click here to <%= link_to "Sign up!", new_salesrepresentative_path %> </h3>
 
+<br><br>
+
+<h3>Already have an account? Click here to <%= link_to "Log In", new_session_path %> </h3>
