--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,55 +1,3 @@
 <h1>New Organization!</h1>
 
-  <% if @organization.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@organization.errors.count, "error") %> prohibited
-        this salesrep from being saved:
-      </h2>
-      <ul>
-        <% @organization.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-
-
-<%= form_for(@organization) do |f|%>
-
-<%#= f.hidden_field :salesrepresentative_id, value: @organization.salesrepresentative.id%>
-<%#= f.collection_select :salesrepresentative_id, Salesrepresentative.all, :id, :name %>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<br><br>
-
-<%= f.label :revenue %>
-<%= f.text_field :revenue %>
-<br><br>
-
-<%= f.label "Country:"%>
-<%= f.text_field :country %>
-<br><br>
-
-<%=f.label "City:"%>
-<%= f.text_field :city%>
-<br><br>
-
-<%= f.label "State:"%>
-<%= f.text_field :state %>
-<br><br>
-
-<%= f.label "Address:"%> 
-<%= f.text_field :address %>
-<br><br>
-
-<%= f.label "Customer?"%>
- <%= f.select(:customer, [["Yes", true], ["No", false]])  %>
-
-
-<br><br>
-
-<%=f.submit "Submit Company/Organization Information:" %>
-
-<% end %>
+<%= render "form"%>
