--- a/app/views/leads/_form.html.erb
+++ b/app/views/leads/_form.html.erb
@@ -15,7 +15,8 @@
 <br>
     <%= form_for (@lead) do |f| %>
         <%= f.hidden_field :salesrepresentative_id, value: @lead.salesrepresentative_id%>
-        <br>
+        <br><br>
+
 
         <%= f.label :name %>
         <%= f.text_field :name %>
@@ -32,8 +33,13 @@
         <br><br>
 
         <%= f.label :customer%>
-        <%= f.text_field :customer%>
+         <%= f.select(:customer, [["Yes", true], ["No", false]])  %>
 
+
+        <br><br>
+
+        <%= f.label "Organization" %>
+        <%= f.collection_select :organization_id, Organization.order(:name),:id,:name, include_blank: true %>
         <br><br>
 
         <%= f.submit "Submit"%>
