got require_login working

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,16 +4,15 @@
       <%= link_to "Optimal CRM", '#', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-        <%#if logged_in? %>
-            <li><%= link_to "Sign up", new_salesrepresentative_path %></li>
-           <li><%= link_to "Log In", new_session_path %></li>
+        <%if logged_in? %>
           <li><%= link_to "Home", salesrepresentative_path(current_user) %></li>
           <li><%= link_to "Tasks", tasks_path(current_user)%></li>
           <li><%= link_to "Organizations", organizations_path(current_user)%></li>
-          <li><%= link_to "Sign in", '#' %></li>
           <li><%= link_to "Log Out", session_path(:salesrepresentative_id), method: :delete %></li>
-
-          <%# end %>
+          <% else %>
+            <li><%= link_to "Sign up", new_salesrepresentative_path %></li>
+           <li><%= link_to "Log In", new_session_path %></li>
+          <% end %>
 
         </ul>
       </nav>
