--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -5,3 +5,8 @@
 <br><br>
 
 <h3>Already have an account? Click here to <%= link_to "Log In", new_session_path %> </h3>
+
+<br><br>
+
+<%= link_to(image_tag("download.png", :size => "50%"), '/auth/google_oauth2') %>
+
