--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -27,3 +27,10 @@
 
 <h4> Customer? </h4>
 <%= @organization.customer %> 
+<br><br>
+
+
+<h4>No longer associated? </h4><%= link_to "Delete Org", organization_path(@organization), method: :delete, data: { confirm: "Really?" }%>
+<br><br>
+<h4>Made a mistake? </h4><%= link_to "Edit Org", edit_organization_path(@organization)%>
+
