--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -14,6 +14,9 @@
 
 <%= form_for(@task) do |f|%>
 
+<%= f.hidden_field :salesrepresentative_id, value: current_user%>
+
+
 <%= f.label "Title:" %>
 <%=  f.text_field :title %>
 <br>
