--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
   <body>
         <%= render 'layouts/header'%>
         <div class="container">
+        <% if flash[:alert] %>
+        <%= flash[:alert] %>
+        <% end %>
+
+        <% if flash[:notice] %>
+        <%= flash[:notice] %>
+        <% end %>
     <%= yield %>
     <%= render 'layouts/footer'%>
     </div>
