added authorization helpers

--- a/app/views/salesrepresentatives/show.html.erb
+++ b/app/views/salesrepresentatives/show.html.erb
@@ -13,10 +13,10 @@
 <label> Click here to add a new task: <%= link_to "Add Task" , new_salesrepresentative_task_path(@salesrep) %> </label>
 <br><br>
 
-<label>Click here to add a new Organization: <%= link_to "New Organization", new_organization_path(@salesrep) %> </label>
+<label>Click here to add a new Organization: <%= link_to "New Organization", new_organization_path %> </label>
 <br><br>
 
-<label>View all of your organizations: <%= link_to "Organizations", organizations_path(@salesrep) %> </label>
+<label>View all of your organizations: <%= link_to "Organizations", organizations_path %> </label>
 
 
 
