--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -29,7 +29,10 @@
 <br><br>
 
 
-
+<%= link_to "edit", edit_organization_path(org) %>
+<br><br>
+<%= link_to "Delete Org", organization_path(@organization), method: :delete, data: { confirm: "Really?" }%>
 <% end %>
+
 
 </ul>
