--- a/app/assets/stylesheets/newstyle.css
+++ b/app/assets/stylesheets/newstyle.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: #fc6603;
     overflow: hidden;
   }
   
