--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,15 @@
 
 /* universal */
 
+body {
+  background-color: #beb8b3;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  padding-top: 60px;
+}
+
+
 html {
     overflow-y: scroll;
   }
@@ -59,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
     float: left;
     margin-right: 10px;
     font-size: 1.7em;
-    color: #fff;
+    color: #fc6603;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding-top: 9px;
