fixed destroy redirects

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,6 @@ body {
   background-color: #beb8b3;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
   padding-top: 60px;
 }
 
@@ -46,6 +45,8 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: -2px;
     margin-bottom: 30px;
     text-align: center;
+    // color: #ffffff;
+
   }
   
   h2 {
