--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,6 +1,10 @@
 <h1> Organizations </h1>
 
 
+<%= link_to "Add Organization", new_organization_path(@organization) %>
+<br><br>
+
+
 <ul> 
 <% @organizations.each do |org| %>
 
@@ -25,7 +29,12 @@
 <br><br>
 
 <h4><li> Customer:</li> </h4>
- <%= org.customer %>
+<% if org.customer == true %> 
+yes
+<% else %> 
+no
+<% end %> 
+
 <br><br>
 
 
@@ -33,7 +42,6 @@
 <br><br>
 <%= link_to "Delete Organization", organization_path(org), method: :delete, data: { confirm: "Really?" }%>
 <br><br>
-<%= link_to "Add Organization", new_organization_path(org) %>
 
 <% end %>
 
