--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -14,7 +14,7 @@
 
 <%= form_for(@task) do |f|%>
 
-<%= f.hidden_field :salesrepresentative_id, value: current_user%>
+<%= f.hidden_field :salesrepresentative_id, value: current_user.id%>
 
 
 <%= f.label "Title:" %>
