--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,8 @@
         <ul class="nav pull-right">
         <%if logged_in? %>
           <li><%= link_to "Home", salesrepresentative_path(current_user) %></li>
-          <li><%= link_to "Tasks", tasks_path(current_user)%></li>
-          <li><%= link_to "Organizations", organizations_path(current_user)%></li>
+          <li><%= link_to "Tasks", tasks_path %></li>
+          <li><%= link_to "Organizations", organizations_path %></li>
           <li><%= link_to "Log Out", session_path(:salesrepresentative_id), method: :delete %></li>
           <% else %>
             <li><%= link_to "Sign up", new_salesrepresentative_path %></li>
