--- a/app/views/salesrepresentatives/new.html.erb
+++ b/app/views/salesrepresentatives/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Welcome to Optimal CRM, Sign-up below SalesRep!</h1>
+<h1>Welcome to Optimal CRM </h1>
+<br>
+<h1>Sign-up below</h1>
+
 
   <% if @salesrep.errors.any? %>
     <div id="error_explanation">
