--- a/app/views/salesrepresentatives/show.html.erb
+++ b/app/views/salesrepresentatives/show.html.erb
@@ -13,6 +13,9 @@
 <label> Click here to add a new task: <%= link_to "Add Task" , new_salesrepresentative_task_path(@salesrep) %> </label>
 <br><br>
 
+<label> Click here to view all tasks: <%= link_to "Tasks" , tasks_path(@salesrep) %> </label>
+<br><br>
+
 <label>Click here to add a new Organization: <%= link_to "New Organization", new_organization_path %> </label>
 <br><br>
 
