--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,16 +1,5 @@
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@task.errors.count, "error") %> prohibited
-        this task from being saved:
-      </h2>
-      <ul>
-        <% @task.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render partial: "shared/errors", locals: {model: @task} %>
+
 
 <%= form_for(@task) do |f|%>
 
