--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "Optimal CRM", '#', id: "logo" %>
+      <%= link_to "Optimal CRM", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
         <%if logged_in? %>
