--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -1,6 +1,6 @@
 <h1> List of leads </h1>
-<ul>
 <% @leads.each do |lead| %>
+<ul style="list-style-position:inside; border-style: solid; border-width: 4px; border-radius: 15px; width: 300px; height: 450px; padding: 10px;" >
     <h4>
          <li>Name:</li> 
     </h4>
@@ -35,5 +35,6 @@
       <br><br>
 
 
-<% end %>   
 </ul>
+<br><br>
+<% end %>   
