--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,7 @@ body {
   background-color: #749adb;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  padding-top: 60px;
+  padding-top: 70px;
 }
 
 
@@ -46,6 +46,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 30px;
     text-align: center;
     color: #ffffff;
+    border-style: solid;
+    border-color: white;
+    border-width: thick;
+    text-shadow: 2px 2px black;
+    border-radius: 15px;
 
   }
   
@@ -57,9 +62,15 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     color: #f5df7d;
   }
+
+  h3 {
+    color: white;
+
+    
+  }
   
   p {
-    font-size: 1.1em;
+    font-size: 1.5em;
     line-height: 1.7em;
   }
 
@@ -71,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.7em;
     color: #f5df7d;
     text-transform: uppercase;
-    letter-spacing: -1px;
+    letter-spacing: 1px;
     padding-top: 9px;
     font-weight: bold;
     line-height: 2;
@@ -112,14 +123,65 @@ footer {
     float: left;
     margin-left: 10px;
   }
-  // a:link {
-  //   color: #ffffff;
-  // }
 
   a {
     color: #FFF;
+    // text-shadow: 1px 1px black;
+
   }
   a:hover {
-     color: #FFF
+     color: #f5df7d;
   }
+
+  label {
+    font-size: 1.7em;
+  }
+
+  // .anim {
+  //   position: relative;
+  //   display: inline-block; 
+  //   overflow: hidden; 
+
+  //   &:before {
+  //     content: '';
+  //     position: absolute;
+  //     top: 0; right: 0;
+  //     height: 100%;
+  //     z-index: 1;
+  //     background-color: black; 
+  //     animation: showText .8s ease;
+  //   }
+
+  //   h1 {
+  //     opacity: 0; 
+  //     animation: animateText .7s forwards;
+
+  //   }
+  // }
+
+  // @keyframes animateText {
+  //   from {
+  //     opacity: 0;
+  //   }
+  //   to {
+  //     opacity: 1;
+  //   }
+  // }
+
+  // @keyframes showText {
+  //   0% {
+  //     width: 0;
+  //     left: 0; 
+  //   }
+  //   50% {
+  //     width: 100%;
+  //     left: 0; 
+  //   }
+  //   100% {
+  //     width: 0;
+  //     left: 100%;
+  //   }
+  // }
+  
+
   
