--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,12 +1,14 @@
 <h1> Welcome to Optimal CRM</h1>
 
-<h3>New to Optimal? Click here to <%= link_to "Sign up!", new_salesrepresentative_path %> </h3>
+<h3>New to Optimal? Click the link to <%= link_to "Sign up!", new_salesrepresentative_path %> </h3>
 
 <br><br>
 
-<h3>Already have an account? Click here to <%= link_to "Log In", new_session_path %> </h3>
+<h3>Already have an account? Click the link to <%= link_to "Log In", new_session_path %> </h3>
 
 <br><br>
 
-<%= link_to(image_tag("download.png", :size => "50%"), '/auth/google_oauth2') %>
+
+
+<h3>Or log-in with google!</h3><%=link_to(image_tag("download.png", :size => "50%"), '/auth/google_oauth2') %>
 
